fixes on alignments

--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 .content {
-    margin-left: 40px;
+    text-align: justify;
 }
 
 h1,
